Agregue una libreria de clases llamada CapaEntidad y agregue la clase Producto. Luego realize cambios en la interfaz de ControlProducto y en su codigo añadiendo un datagridView para ver los productos. Agregue en la capa negocio una clase llamada CapaNegocioCrudProductos y tambien añadi a la capa dato una clase llamada CapaDatosCrudProductos.

--- a/CapaNegocios/CapaNegocios.csproj
+++ b/CapaNegocios/CapaNegocios.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CapaNegocioCrudProductos.cs" />
     <Compile Include="CapaNegociosFacturacionProductos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -48,6 +50,10 @@
     <ProjectReference Include="..\CapaDatos\CapaDatos.csproj">
       <Project>{d1e7925d-5c6d-4f9c-9ecf-1e50a8fd8214}</Project>
       <Name>CapaDatos</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CapaEntidad\CapaEntidad.csproj">
+      <Project>{eee74982-6284-4b57-9dd7-3b6a1e1c2aa2}</Project>
+      <Name>CapaEntidad</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
