--- a/ProyectoAdministradores/CapaPresentacion.csproj
+++ b/ProyectoAdministradores/CapaPresentacion.csproj
@@ -133,6 +133,9 @@
     <Compile Include="UI.Designer.cs">
       <DependentUpon>UI.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ControlProductos.resx">
+      <DependentUpon>ControlProductos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
@@ -179,6 +182,10 @@
     <None Include="Resources\padrino.jpg1.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CapaEntidad\CapaEntidad.csproj">
+      <Project>{eee74982-6284-4b57-9dd7-3b6a1e1c2aa2}</Project>
+      <Name>CapaEntidad</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CapaNegocios\CapaNegocios.csproj">
       <Project>{835a8aa9-35de-4cbb-b35a-a598eddd7675}</Project>
       <Name>CapaNegocios</Name>
