--- a/ProyectoAdministradores/CapaPresentacion.csproj
+++ b/ProyectoAdministradores/CapaPresentacion.csproj
@@ -83,6 +83,12 @@
     <Compile Include="ControlProveedores.Designer.cs">
       <DependentUpon>ControlProveedores.cs</DependentUpon>
     </Compile>
+    <Compile Include="CreateProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateProducto.Designer.cs">
+      <DependentUpon>CreateProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,6 +141,9 @@
     </Compile>
     <EmbeddedResource Include="ControlProductos.resx">
       <DependentUpon>ControlProductos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateProducto.resx">
+      <DependentUpon>CreateProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
