--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CapaDatosConexion.cs" />
     <Compile Include="CapaDatosFacturacionProductos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProvedorDataController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
