--- a/CapaNegocios/CapaNegocios.csproj
+++ b/CapaNegocios/CapaNegocios.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CapaNegocioCrudProductos.cs" />
     <Compile Include="CapaNegocioProovedor.cs" />
+    <Compile Include="CapaNegociosFacturacionModulos.cs" />
     <Compile Include="CapaNegociosFacturacionProductos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
