--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CapaDatosConexion.cs" />
     <Compile Include="CapaDatosCrudProductos.cs" />
+    <Compile Include="CapaDatosFacturacionModulos.cs" />
     <Compile Include="CapaDatosFacturacionProductos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvedorDataController.cs" />
