--- a/ProyectoAdministradores/CapaPresentacion.csproj
+++ b/ProyectoAdministradores/CapaPresentacion.csproj
@@ -101,11 +101,11 @@
     <Compile Include="FacturacionProductos.Designer.cs">
       <DependentUpon>FacturacionProductos.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormReporteFacturacionProductos.cs">
+    <Compile Include="FormFacturacionProductos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormReporteFacturacionProductos.Designer.cs">
-      <DependentUpon>FormReporteFacturacionProductos.cs</DependentUpon>
+    <Compile Include="FormFacturacionProductos.Designer.cs">
+      <DependentUpon>FormFacturacionProductos.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -121,11 +121,23 @@
     <Compile Include="RegistrosVentas.Designer.cs">
       <DependentUpon>RegistrosVentas.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReporteFacturacionModulos.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ReporteFacturacionModulos.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ReporteFacturacionProductos.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ReporteFacturacionProductos.rpt</DependentUpon>
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="RPT_FacturacionModulos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RPT_FacturacionModulos.Designer.cs">
+      <DependentUpon>RPT_FacturacionModulos.cs</DependentUpon>
     </Compile>
     <Compile Include="UI.cs">
       <SubType>Form</SubType>
@@ -145,8 +157,8 @@
     <EmbeddedResource Include="FacturacionProductos.resx">
       <DependentUpon>FacturacionProductos.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormReporteFacturacionProductos.resx">
-      <DependentUpon>FormReporteFacturacionProductos.cs</DependentUpon>
+    <EmbeddedResource Include="FormFacturacionProductos.resx">
+      <DependentUpon>FormFacturacionProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -158,9 +170,16 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ReporteFacturacionModulos.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ReporteFacturacionModulos.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReporteFacturacionProductos.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>ReporteFacturacionProductos.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RPT_FacturacionModulos.resx">
+      <DependentUpon>RPT_FacturacionModulos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI.resx">
       <DependentUpon>UI.cs</DependentUpon>
